qm9_test/AI2BMD-ViSNet/slurm-38575268.out
/opt/slurm/var/spool/job38575268/slurm_script: line 11: module: command not found
/opt/slurm/var/spool/job38575268/slurm_script: line 12: activate: No such file or directory
Python 2.7.5
Mon Jul 29 13:19:01 2024       
+-----------------------------------------------------------------------------+
| NVIDIA-SMI 470.141.03   Driver Version: 470.141.03   CUDA Version: 11.4     |
|-------------------------------+----------------------+----------------------+
| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |
| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |
|                               |                      |               MIG M. |
|===============================+======================+======================|
|   0  Tesla V100-SXM2...  On   | 00000000:06:00.0 Off |                    0 |
| N/A   36C    P0    41W / 300W |      0MiB / 16160MiB |      0%      Default |
|                               |                      |                  N/A |
+-------------------------------+----------------------+----------------------+
|   1  Tesla V100-SXM2...  On   | 00000000:07:00.0 Off |                    0 |
| N/A   37C    P0    42W / 300W |      0MiB / 16160MiB |      0%      Default |
|                               |                      |                  N/A |
+-------------------------------+----------------------+----------------------+
|   2  Tesla V100-SXM2...  On   | 00000000:0A:00.0 Off |                    0 |
| N/A   38C    P0    44W / 300W |      0MiB / 16160MiB |      0%      Default |
|                               |                      |                  N/A |
+-------------------------------+----------------------+----------------------+
|   3  Tesla V100-SXM2...  On   | 00000000:0B:00.0 Off |                    0 |
| N/A   36C    P0    45W / 300W |      0MiB / 16160MiB |      0%      Default |
|                               |                      |                  N/A |
+-------------------------------+----------------------+----------------------+
|   4  Tesla V100-SXM2...  On   | 00000000:85:00.0 Off |                    0 |
| N/A   38C    P0    43W / 300W |      0MiB / 16160MiB |      0%      Default |
|                               |                      |                  N/A |
+-------------------------------+----------------------+----------------------+
|   5  Tesla V100-SXM2...  On   | 00000000:86:00.0 Off |                    0 |
| N/A   39C    P0    43W / 300W |      0MiB / 16160MiB |      0%      Default |
|                               |                      |                  N/A |
+-------------------------------+----------------------+----------------------+
|   6  Tesla V100-SXM2...  On   | 00000000:89:00.0 Off |                    0 |
| N/A   40C    P0    45W / 300W |      0MiB / 16160MiB |      0%      Default |
|                               |                      |                  N/A |
+-------------------------------+----------------------+----------------------+
|   7  Tesla V100-SXM2...  On   | 00000000:8A:00.0 Off |                    0 |
| N/A   37C    P0    45W / 300W |      0MiB / 16160MiB |      0%      Default |
|                               |                      |                  N/A |
+-------------------------------+----------------------+----------------------+
                                                                               
+-----------------------------------------------------------------------------+
| Processes:                                                                  |
|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |
|        ID   ID                                                   Usage      |
|=============================================================================|
|  No running processes found                                                 |
+-----------------------------------------------------------------------------+
  File "train.py", line 143
    f"Unknown prior model {args['prior_model']}. "
                                                 ^
SyntaxError: invalid syntax
  File "train.py", line 143
    f"Unknown prior model {args['prior_model']}. "
                                                 ^
SyntaxError: invalid syntax
  File "train.py", line 143
    f"Unknown prior model {args['prior_model']}. "
                                                 ^
SyntaxError: invalid syntax
  File "train.py", line 143
    f"Unknown prior model {args['prior_model']}. "
                                                 ^
SyntaxError: invalid syntax
  File "train.py", line 143
    f"Unknown prior model {args['prior_model']}. "
                                                 ^
SyntaxError: invalid syntax
  File "train.py", line 143
    f"Unknown prior model {args['prior_model']}. "
                                                 ^
SyntaxError: invalid syntax
  File "train.py", line 143
    f"Unknown prior model {args['prior_model']}. "
                                                 ^
SyntaxError: invalid syntax
  File "train.py", line 143
    f"Unknown prior model {args['prior_model']}. "
                                                 ^
SyntaxError: invalid syntax
  File "train.py", line 143
    f"Unknown prior model {args['prior_model']}. "
                                                 ^
SyntaxError: invalid syntax
  File "train.py", line 143
    f"Unknown prior model {args['prior_model']}. "
                                                 ^
SyntaxError: invalid syntax
  File "train.py", line 143
    f"Unknown prior model {args['prior_model']}. "
                                                 ^
SyntaxError: invalid syntax
  File "train.py", line 143
    f"Unknown prior model {args['prior_model']}. "
                                                 ^
SyntaxError: invalid syntax
slurmstepd: error: *** JOB 38575268 ON dgx000 CANCELLED AT 2024-07-29T13:19:52 ***
